# takumi

./: .gitignore  Cargo.toml  LICENSE  README.md  biome.json  package.json  release.sh  renovate.json
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: auto-release.yml  ci.yml  release-pr.yml  release.yml  takumi-napi-core-ci.yml  takumi-wasm-ci.yml  test-and-benchmark.yml
assets/fonts/: OFL.txt
docs/: package.json  react-router.config.ts  tsconfig.json  vite.config.ts
docs/app/: layout-config.tsx  lucide-react.d.ts  root.tsx  routes.ts  source.ts
docs/lib/: code-evaluator.ts
example/: Cargo.toml
example/cloudflare-workers/: README.md  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
example/nextjs/: README.md  next.config.ts  package.json  tsconfig.json
example/og-image/: component.tsx  index.tsx  package.json
example/rust/: Cargo.toml
example/src/: custom_node.rs  lib.rs  minimal.rs
example/twitter-images/: index.tsx  package.json
imagen/: Cargo.toml  README.md
imagen-server/: Cargo.toml  README.md
imagen-server/src/: args.rs  image_store.rs  main.rs
imagen/benches/: imagen.rs
imagen/src/: border_radius.rs  color.rs  context.rs  lib.rs  render.rs
imagen/src/node/: border.rs  draw.rs  measure.rs  mod.rs  properties.rs  style.rs
src/: border_radius.rs  color.rs  context.rs  font.rs  lib.rs  main.rs  node.rs  render.rs
src/draw/: border_radius.rs  draw.rs  mod.rs  rgb.rs
src/node/: circle_node.rs  container_node.rs  draw.rs  image_node.rs  measure.rs  mod.rs  properties.rs  rect_node.rs  space_node.rs  style.rs  text_node.rs
takumi/: Cargo.toml  README.md
takumi-helpers/: README.md  build.ts  package.json  tsconfig.json
takumi-helpers/src/: color-parsing.ts  helpers.ts  index.ts  (+6 more)
takumi-image-response/: README.md  package.json
takumi-napi-core/: .gitignore  .npmignore  Cargo.toml  README.md  package.json
takumi-napi-core/src/: dts-header.d.ts  lib.rs  load_font_task.rs  load_local_image_task.rs  preload_image_task.rs  put_persistent_image_task.rs  render_task.rs  renderer.rs
takumi-napi-core/tests/: render.test.ts
takumi-napi-core/tests/bench/: index.ts
takumi-server/: Cargo.toml  Dockerfile  README.md
takumi-server/src/: args.rs  generate_image.rs  hmac_verify.rs  image_store.rs  integrity_check.rs  lib.rs  main.rs  node.rs
takumi-server/tests/: generate_image_tests.rs  hmac_verify_tests.rs  main_tests.rs
takumi-template/: README.md  package.json
takumi-types/: README.md  package.json
takumi-wasm/: Cargo.toml  README.md  package.json  tsconfig.json
takumi-wasm/src/: lib.rs
takumi-wasm/tests/: render.test.ts
takumi/benches/: gradient_bench.rs  takumi.rs
takumi/src/: border_radius.rs  box_shadow.rs  color.rs  context.rs  font.rs  lib.rs  render.rs
takumi/src/core/: context.rs  default_image_store.rs  error.rs  font_context.rs  http_image_store.rs  image_store.rs  mod.rs  stores.rs  viewport.rs
takumi/src/effects/: border.rs  mod.rs  radius.rs  shadow.rs
takumi/src/layout/: container_node.rs  default_node.rs  image_node.rs  macros.rs  measure.rs  mod.rs  node.rs  text_node.rs  trait_node.rs  viewport.rs
takumi/src/layout/node/: container.rs  image.rs  mod.rs  text.rs
takumi/src/layout/style/: macros.rs  mod.rs  stylesheets.rs
takumi/src/layout/style/properties/: background_image.rs  background_position.rs  background_repeat.rs  background_size.rs  box_shadow.rs  color.rs  font_feature_settings.rs  font_style.rs  font_variation_settings.rs  font_weight.rs  gap.rs  gradient_utils.rs  length_unit.rs  line_height.rs  linear_gradient.rs  mod.rs  noise_v1.rs  overflow_wrap.rs  parser.rs  radial_gradient.rs  sides.rs  text_shadow.rs  text_stroke.rs  transform.rs  word_break.rs
takumi/src/layout/style/properties/grid/: grid_length_unit.rs  grid_line.rs  grid_min_max_size.rs  grid_placement.rs  grid_repeat_track.rs  grid_repetition_count.rs  grid_template_areas.rs  grid_template_component.rs  grid_track_size.rs  mod.rs
takumi/src/node/: border.rs  draw.rs  macros.rs  measure.rs  mod.rs  style.rs
takumi/src/rendering/: background_drawing.rs  canvas.rs  debug_drawing.rs  draw.rs  image_drawing.rs  mask.rs  mod.rs  render.rs  renderer.rs  text_drawing.rs
takumi/src/rendering/components/: border.rs  mod.rs  radius.rs  shadow.rs
takumi/src/resources/: font.rs  image.rs  mod.rs  woff.rs
takumi/src/resources/font/: mod.rs  woff.rs
takumi/src/style/: color.rs  macros.rs  mod.rs  properties.rs  stylesheets.rs  units.rs
takumi/src/style/properties/: box_shadow.rs  color.rs  font_weight.rs  gap.rs  grid.rs  length_unit.rs  linear_gradient.rs  mod.rs  parser.rs  sides.rs  units.rs
takumi/src/style/properties/grid/: grid_length_unit.rs  grid_line.rs  grid_min_max_size.rs  grid_placement.rs  grid_repeat_track.rs  grid_repetition_count.rs  grid_template_areas.rs  grid_template_component.rs  grid_track_size.rs
takumi/tests/: fixtures_style_align_items.rs  fixtures_style_alignment.rs  fixtures_style_background_color.rs  fixtures_style_background_image.rs  fixtures_style_border_radius.rs  fixtures_style_border_width.rs  fixtures_style_box_shadow.rs  fixtures_style_flex_basis.rs  fixtures_style_flex_direction.rs  fixtures_style_gap.rs  fixtures_style_grid_template_columns.rs  fixtures_style_grid_template_rows.rs  fixtures_style_height.rs  fixtures_style_justify_content.rs  fixtures_style_layout.rs  fixtures_style_margin.rs  fixtures_style_max_height.rs  fixtures_style_max_width.rs  fixtures_style_min_height.rs  fixtures_style_min_width.rs  fixtures_style_object_fit.rs  fixtures_style_object_fit_contain.rs  fixtures_style_object_fit_cover.rs  fixtures_style_object_fit_fill.rs  fixtures_style_object_fit_none.rs  fixtures_style_object_fit_scale_down.rs  fixtures_style_object_position.rs  fixtures_style_padding.rs  fixtures_style_position.rs  fixtures_style_sizing.rs  fixtures_style_spacing.rs  fixtures_style_transform.rs  fixtures_style_visuals.rs  fixtures_style_width.rs  fixtures_text.rs  font_tests.rs  measure_tests.rs  properties_tests.rs  test_utils.rs  units_tests.rs
(+180 files in other folders)
