[package]
name = "imagen-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
bytes = "1.0"
serde_json = "1.0"
mimalloc = "0.1"
async-trait = "0.1"
lru = "0.14"

[dependencies.imagen]
path = "../imagen"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls", "http2"]
