[package]
name = "takumi"
version = "0.1.0"
edition = "2024"

[dependencies]
imageproc = "0.25"
woff2-patched = "0.4"
futures-util = "0.3"
bytes = "1.0"
async-trait = "0.1"
typetag = "0.2"
dyn-clone = "1.0"
merge = "0.2"
ts-rs = "11.0"

[dependencies.cosmic-text]
version = "0.14"
features = ["shape-run-cache", "hashbrown"]

[dependencies.taffy]
version = "0.8"
features = ["serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.image]
default-features = false
version = "0.25"
features = ["jpeg", "png", "webp"]

[dev-dependencies.criterion]
version = "0.6"
features = ["html_reports"]

[[bench]]
name = "takumi"
harness = false
