[package]
name = "takumi-napi-core"
version = "0.29.4"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
rayon = "1.10"

[dependencies.takumi]
path = "../takumi"
features = [
  "woff2",
  "woff",
  "image_data_uri",
  "svg",
  "rayon",
  "avif",
  "embed_fonts",
]
default-features = false

[dependencies.napi]
version = "3"
default-features = false
features = ["napi10", "serde-json"]

[dependencies.napi-derive]
version = "3"
features = ["type-def"]

[build-dependencies]
napi-build = "2"
