[package]
name = "takumi-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
mimalloc = "0.1"

[dependencies.takumi]
path = "../takumi"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]

[dependencies.clap]
version = "4.5"
features = ["derive"]
