[package]
name = "takumi-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
globwalk = "0.9.1"
mimalloc = "0.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0"
query-string-builder = "0.6.0"

[dev-dependencies]
tower = "0.5.2"

[dependencies.hex]
version = "0.4"
optional = true

[dependencies.hmac]
version = "0.12"
optional = true

[dependencies.sha2]
version = "0.10"
optional = true

[dependencies.takumi]
path = "../takumi"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]

[dependencies.clap]
version = "4.5"
features = ["derive"]

[features]
default = ["hmac_verify"]
hmac_verify = ["dep:hmac", "dep:sha2", "dep:hex"]
