[package]
name = "takumi-wasm"
version = "0.20.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
base64 = "0.22"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.takumi]
path = "../takumi"
features = ["wasm", "woff2", "woff", "image_data_uri", "svg"]
default-features = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--enable-bulk-memory']
