[package]
name = "takumi-wasm"
version = "0.29.4"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
js-sys = "0.3"
base64 = "0.22"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.takumi]
path = "../takumi"
features = ["woff2", "image_data_uri", "svg"]
default-features = false

# https://github.com/rust-lang/rust/issues/93294
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--enable-bulk-memory']
