[package]
name = "takumi"
version = "0.26.0"
edition = "2024"
license = "MIT"
description = "Render your React components to images."
keywords = ["react", "image", "css", "flexbox", "layout", "rendering"]
repository = "https://github.com/kane50613/takumi"
homepage = "https://takumi.kane.tw"
readme = "README.md"
rust-version = "1.85.1"

[dependencies]
merge = "0.2"
slotmap = "1.0"
cssparser = "0.35"
csscolorparser = "0.7"

[dependencies.rayon]
version = "1.10"
optional = true

[dependencies.ts-rs]
version = "11.0"
features = ["no-serde-warnings"]

[dependencies.base64]
version = "0.22"
optional = true

[dependencies.bytes]
version = "1.10"
optional = true

[dependencies.minreq]
version = "2.14"
features = ["https"]
optional = true

[dependencies.flate2]
version = "1.1"
optional = true

[dependencies.woff2-patched]
version = "0.4"
optional = true

[dependencies.lru]
version = "0.16"
optional = true

[dependencies.cosmic-text]
version = "0.14"
features = ["shape-run-cache"]

[dependencies.taffy]
version = "0.9"
default-features = false
features = ["flexbox", "grid", "taffy_tree"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.image]
default-features = false
version = "0.25"
features = ["jpeg", "png", "webp"]

[dependencies.resvg]
version = "0.45"
default-features = false
optional = true

[features]
default = [
  "woff2",
  "woff",
  "image_data_uri",
  "http_image_store",
  "svg",
  "rayon",
]
wasm = ["dep:wasm-bindgen"]
image_data_uri = ["dep:base64"]
svg = ["dep:resvg"]
woff2 = ["dep:woff2-patched", "dep:bytes"]
woff = ["dep:flate2"]
http_image_store = ["dep:minreq", "dep:lru"]
rayon = ["dep:rayon", "image/rayon"]
test_update_fixtures = []

[dev-dependencies]
serde_json = "1"
