[package]
name = "takumi"
version = "0.29.4"
edition = "2024"
license = "MIT"
description = "Render your React components to images."
keywords = ["react", "image", "css", "flexbox"]
repository = "https://github.com/kane50613/takumi"
homepage = "https://takumi.kane.tw"
readme = "README.md"
rust-version = "1.85.1"

[dependencies]
merge = "0.2"
cssparser = "0.35"
csscolorparser = "0.7"
noise = "0.9"
zeno = "0.3"

[dependencies.parley]
version = "0.5"
default-features = false
features = ["std"]

[dependencies.swash]
version = "0.2"
default-features = false
features = ["std", "scale"]

[dependencies.rayon]
version = "1.10"
optional = true

[dependencies.ts-rs]
version = "11.0"
features = ["no-serde-warnings"]

[dependencies.base64]
version = "0.22"
optional = true

[dependencies.bytes]
version = "1.10"
optional = true

[dependencies.flate2]
version = "1.1"
optional = true

[dependencies.woff2-patched]
version = "0.4"
optional = true

[dependencies.taffy]
version = "0.9"
default-features = false
features = ["flexbox", "grid", "taffy_tree"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.image]
default-features = false
version = "0.25"
features = ["jpeg", "png", "webp"]

[dependencies.resvg]
version = "0.45"
default-features = false
optional = true

[dev-dependencies.tiny-skia]
version = "0.11"
default-features = false
features = ["std", "simd"]

[features]
default = ["woff2", "woff", "image_data_uri", "svg", "rayon", "avif"]
avif = ["image/avif"]
image_data_uri = ["dep:base64"]
svg = ["dep:resvg"]
woff2 = ["dep:woff2-patched", "dep:bytes"]
woff = ["dep:flate2"]
rayon = ["dep:rayon", "image/rayon"]
embed_fonts = []

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "gradient_bench"
harness = false
